--- a/index.html
+++ b/index.html
@@ -942,11 +942,13 @@
                                 <img class="swiper-person__img" src="img/person-1.png" />
                                 <div class="swiper-person__decor"></div>
                                 <div class="swiper-person__shadow"></div>
-                                <div class="swiper-person__name">
-                                    Олег Воробьев
-                                </div>
-                                <div class="swiper-person__profession">
-                                    Прораб
+                                <div class="swiper-person__name-wrapper">
+                                    <div class="swiper-person__name">
+                                        Олег Воробьев
+                                    </div>
+                                    <div class="swiper-person__profession">
+                                        Прораб
+                                    </div>
                                 </div>
                                 <ul class="swiper-person__list">
                                     <li class="swiper-person__li">
@@ -969,11 +971,13 @@
                                 <img class="swiper-person__img" src="img/person-2.png" />
                                 <div class="swiper-person__decor"></div>
                                 <div class="swiper-person__shadow"></div>
-                                <div class="swiper-person__name">
-                                    Олег Воробьев
-                                </div>
-                                <div class="swiper-person__profession">
-                                    Прораб
+                                <div class="swiper-person__name-wrapper">
+                                    <div class="swiper-person__name">
+                                        Мария Обухова
+                                    </div>
+                                    <div class="swiper-person__profession">
+                                        Руководитель финансовой службы
+                                    </div>
                                 </div>
                                 <ul class="swiper-person__list">
                                     <li class="swiper-person__li">
@@ -996,11 +1000,13 @@
                                 <img class="swiper-person__img" src="img/person-3.png" />
                                 <div class="swiper-person__decor"></div>
                                 <div class="swiper-person__shadow"></div>
-                                <div class="swiper-person__name">
-                                    Олег Воробьев
-                                </div>
-                                <div class="swiper-person__profession">
-                                    Прораб
+                                <div class="swiper-person__name-wrapper">
+                                    <div class="swiper-person__name">
+                                        Даниил Басенков
+                                    </div>
+                                    <div class="swiper-person__profession">
+                                        Менеджер по снабжению
+                                    </div>
                                 </div>
                                 <ul class="swiper-person__list">
                                     <li class="swiper-person__li">
